--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
 
 # Install dependencies
 install:
-  - pip install -r requirements.txt
+  - pip install -r requirements.txt -q
 
 # Run the tests
 script:
