--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,15 @@ absl-py==0.2.2
 aniso8601==6.0.0
 asn1crypto==0.24.0
 astor==0.6.2
+atomicwrites==1.3.0
+attrs==19.1.0
 backcall==0.1.0
 bleach==1.5.0
 certifi==2019.3.9
 cffi==1.12.2
 chardet==3.0.4
 Click==7.0
+coverage==4.0.3
 cryptography==2.6.1
 cycler==0.10.0
 decorator==4.3.0
@@ -29,23 +32,29 @@ kiwisolver==1.0.1
 Markdown==2.6.11
 MarkupSafe==1.1.1
 matplotlib==3.0.3
-mkl-fft==1.0.0.17
+mkl-fft==1.0.0
 mkl-random==1.0.1
+more-itertools==7.0.0
 numpy==1.14.5
 pandas==0.24.2
 parso==0.2.1
 pexpect==4.6.0
 pickleshare==0.7.4
+pluggy==0.9.0
 prompt-toolkit==1.0.15
 protobuf==3.6.1
 ptyprocess==0.6.0
+py==1.8.0
 pycparser==2.19
 Pygments==2.2.0
 pyOpenSSL==19.0.0
 pyparsing==2.2.0
 PySocks==1.6.8
+pytest==4.4.0
+python-coveralls==2.9.1
 python-dateutil==2.7.3
 pytz==2018.5
+PyYAML==5.1
 requests==2.21.0
 scipy==1.1.0
 simplegeneric==0.8.1
