--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
 install:
   - pip install -r requirements.txt -q
   - pip install python-coveralls
-  - pip insatll nose
+  - pip install nose
 
 # Run the tests
 script:
