--- a/requirements.txt
+++ b/requirements.txt
@@ -36,7 +36,7 @@ mkl-fft==1.0.0.17
 mkl-random==1.0.1
 more-itertools==7.0.0
 numpy==1.14.5
-nose=1.3.7
+nose==1.3.7
 pandas==0.24.2
 parso==0.2.1
 pexpect==4.6.0
