--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
 
 # Run the tests
 script:
-  - nosetests --with-coverage
+  - nosetests --with-coverage --cover-package=sudoku
 
 # Code coverage
 after_success:
